[project]
name = "check_aprs"
version = "0.1.0"
description = "A passive Icinga monitoring daemon for APRS stations"
authors = [
    {name = "Adam Goldsmith", email = "adam@adamgoldsmith.name"},
]
dependencies = [
    "aprs3~=8.0",
    "aiohttp~=3.8",
    "asyncclick~=8.1",
    "anyio~=3.6", # TODO: this is actually an undeclared dependency of asyncclick
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
check_aprs = "check_aprs:main"

[tool]
[tool.pdm]
includes = ["check_aprs.py"]

[tool.black]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
